# kernel_msm

./: .gitignore  4.19.commit.txt  AndroidKernel.mk  BUILD.bazel  COMPILING  Kbuild  Kconfig  MAINTAINERS  Makefile  OWNERS  OWNERS_core  OWNERS_pixelwatchbsp  PREUPLOAD.cfg  README.md  README.md7  README_Xperia  abi_gki_aarch64_redbull_whitelist  afcebb8.diff  bluegill_kernel_env  build.config  build.config.baiji  build.config.bass  build.config.bluecross  build.config.bluecross_debug_api  build.config.bluecross_debug_hang  build.config.bluecross_debug_kmemleak  build.config.bluecross_debug_locking  build.config.bluecross_debug_memory  build.config.bluecross_debug_memory_accounting  build.config.bluecross_gcc  build.config.bluecross_kasan  build.config.bluecross_lts  build.config.bluecross_no-cfi  build.config.bonito  build.config.bonito_debug_api  build.config.bonito_debug_hang  build.config.bonito_debug_kmemleak  build.config.bonito_debug_locking  build.config.bonito_debug_memory  build.config.bonito_debug_memory_accounting  (+136 more)
drivers/power/supply/qcom/: BUILD.bazel  Kconfig  Makefile  battery-profile-loader.c  battery-profile-loader.h  battery.c  bcl_peripheral.c  external-fg-gen3.c  external-fg-gen3.h  external-smb2.c  external-smb2.h  fg-alg.c  fg-alg.h  fg-core.h  fg-memif.c  fg-reg.h  fg-util.c  p9221_charger.c  p9221_charger.h  pmic-voter-compat.c  pmic-voter.c  qbg-battery-profile.c  qbg-battery-profile.h  qbg-core.h  qbg-iio.h  qbg-sdam.c  qbg-sdam.h  qg-core.h  qg-reg.h  qg-soc.c  qg-util.c  qpnp-fg-gen3.c  qpnp-fg-gen4.c  qpnp-qg.c  qpnp-smb2.c  qpnp-smb5.c  (+23 more)
(+8574 files in other folders)
